# netku-sentinel

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  devspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: deploy-prod.yml  deploy-staging.yml  deploy-test.yml  load-pr-data.yml  pr-ci.yml  promote-prod.yml
app/: container.py
app/controllers/admin/: __init__.py  auth.py  main.py  views.py
app/controllers/bot/: __init__.py  main.py
app/controllers/events/: engine.py
app/domains/: engine.py
app/entrypoints/: admin.py  bot.py  events.py
app/infra/config/: __init__.py  admin.py  bot.py  postgres.py  rabbitmq.py  redis.py  sentry.py  settings.py
app/infra/database/: models.py  uow.py
app/infra/database/migrations/: env.py
app/infra/database/migrations/versions/: 0761a4517a94_init_migration.py  (+3 more)
app/infra/database/repositories/: base.py  inbox.py
app/infra/logging/: __init__.py  config.yaml  logger.py
app/infra/rabbit/: broker.py  queue.py
app/infra/redis/: broker.py
app/infra/tracing/: sentry.py
app/schemas/: engine.py  event.py  subscription.py
app/services/: engine.py
k8s/: Chart.yaml  secrets-dev.yaml  secrets-prod.yaml  secrets-staging.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values-test.yaml  values.yaml
k8s/templates/: admin-deployment.yaml  admin-service.yaml  bot-deployment.yaml  bot-service.yaml  config.yaml  events-deployment.yaml  ingress.yaml  migrate-job.yaml  secrets.yaml
