[tool.ruff]
target-version = "py311"
exclude = ["gen"]
lint.select = ["I"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
#
known-first-party = ["your_project"]
combine-as-imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[project]
name = "netku-sentinel"
version = "1.0.0"
license = { text = "MIT" }
authors = [
    { name = "Maxim Gerasimov", email = "infanasotku@gmail.com" }
]
